src/tests/binary-operators/38.txt
binary-operators/38.c:8:3: error: lvalue required as left operand of assignment
   (k = 5, (i = 5 + (6, 7, 8) * sub(1, 2)), "hello") = 100;
   ^
binary-operators/38.c:10:3: error: lvalue required as left operand of assignment
   (k = 5, (i = 5 + (6, 7, 8) * sub(1, 2)), "hello") = "byebye";
   ^
